--- a/users/templates/users/sign-up.html
+++ b/users/templates/users/sign-up.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    <h1>Sign-up View</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block section %}
+
+
+{% endblock %}
