implemented some basic UI design in navbar and post list of HOME url; implemented  post cell template using bootstrap;

--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -5,13 +5,7 @@
     {% if posts_list|length > 0 %}
         <h2>Latest Posts</h2>
 
-        {% for post in posts_list %}
-
-            <a href="{% url 'post_detail' username=post.blog.owner.username pk=post.pk %}">
-                <p> {{ post.title }} </p>
-            </a>
-
-        {% endfor %}
+        {% include 'blogs/post_cell.html' %}
     {% else %}
         :( There isn't any post
     {% endif %}
