--- a/wordplease/templates/base.html
+++ b/wordplease/templates/base.html
@@ -9,33 +9,31 @@
     <link href="{% static 'css/bootstrap-theme.min.css' %}" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <a href="{% url 'blogs_home' %}">Home</a>
-        |
-        <a href="{% url 'blogs_list' %}">Explore</a>
-        {% if user.is_authenticated %}
-            |
-            <a href="{% url 'blog_detail' username=user.username %}">My Blog</a>
-            |
-            <a href="{% url 'users_logout' %}">Log out</a>
-        {% else %}
-            |
-            <a href="{% url 'users_login' %}">Log in</a>
-            |
-            <a href="{% url 'users_signup' %}">Sign up</a>
-        {% endif %}
-
-    </nav>
-    <hr/>
-    <section>
-        <h1>WordPlease by David Regatos</h1>
-        <p>Startup Engineering Master Bootcamp, 1st Edition</p>
-    </section>
-    <hr/>
-    <section>
-        {% block section %} {% endblock %}
-    </section>
-    <hr/>
-    <small>Wordplease by David Regatos &copy; All right reserved</small>
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url 'blogs_home' %}">Home</a></li>
+                <li><a href="{% url 'blogs_list' %}">Explore</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'blog_detail' username=user.username %}">My Blog</a></li>
+                    <li><a href="{% url 'users_logout' %}">Log out</a></li>
+                {% else %}
+                    <li><a href="{% url 'users_login' %}">Log in</a></li>
+                    <li><a href="{% url 'users_signup' %}">Sign up</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+        <hr/>
+        <section>
+            <h1>WordPlease by David Regatos</h1>
+            <p>Startup Engineering Master Bootcamp, 1st Edition</p>
+        </section>
+        <hr/>
+        <section>
+            {% block section %} {% endblock %}
+        </section>
+        <hr/>
+        <small>WordPlease by David Regatos &copy; All right reserved</small>
+    </div>
 </body>
 </html>
