--- a/blogs/templates/blogs/blogs_list.html
+++ b/blogs/templates/blogs/blogs_list.html
@@ -2,5 +2,14 @@
 
 {% block section %}
 
+    {% for blog in blogs_list %}
+
+        <li>
+            <a href="{% url 'blog_detail' username=blog.owner.username %}">
+                <strong>{{ blog.name }}</strong> <small>created by {{ blog.owner.username }} </small>
+            </a>
+        </li>
+
+    {% endfor %}
 
 {% endblock %}
