--- a/wordplease/templates/base.html
+++ b/wordplease/templates/base.html
@@ -25,7 +25,7 @@
         </nav>
         <hr/>
         <section>
-            <h1>WordPlease by David Regatos</h1>
+            <h1>WordPlease</h1>
             <p>Startup Engineering Master Bootcamp, 1st Edition</p>
         </section>
         <hr/>
