--- a/blogs/templates/blogs/blog_detail.html
+++ b/blogs/templates/blogs/blog_detail.html
@@ -13,7 +13,7 @@
         </div>
 
         <div>
-            <h2>{{ blog.name }} <small>by {{ blog.owner.username }}</small></h2>
+            <h2> {{ blog.name }} </h2>
 
         </div>
 
@@ -25,7 +25,7 @@
             {% if posts_list|length > 0 %}
                 {% include 'blogs/post_cell.html' %}
             {% else %}
-                :( There isn't any post
+                Go ahead, create your first awesome post!!
             {% endif %}
         </div>
 
