--- a/users/templates/users/sign-up.html
+++ b/users/templates/users/sign-up.html
@@ -1,6 +1,20 @@
 {% extends 'base.html' %}
 
+{% block title %} Sign up {% endblock%}
+
 {% block section %}
 
+    <h3>Create a new account</h3>
+
+    <form method="post">
+        {% csrf_token %} <!-- Protección -->
+        <table>
+            {{ signup_form.as_table }}
+        </table>
+
+        <div>
+            <input type="submit" value="Create account">
+        </div>
+    </form>
 
 {% endblock %}
