--- a/blogs/templates/blogs/new_post.html
+++ b/blogs/templates/blogs/new_post.html
@@ -4,7 +4,7 @@
 
     <h3>New post</h3>
 
-        {% if success_message %} {{ message }} {% endif %}
+        {% if success_message %} <span style="color:green">{{ success_message|safe }}</span> {% endif %}
 
         <form method="post" novalidate>
           {% csrf_token %}
